# sanic-web

./: .dockerignore  .env  .env.dev  .env.test  .gitattributes  .gitignore  Makefile  README-en.md  README.md  input.docx.md  pyproject.toml  serv.py
agent/: common_react_agent.py  langgraph_react_agent.py
agent/excel/: excel_agent.py  excel_sql_node.py
agent/mcp/: query_db_tool.py
agent/text2sql/: text2_sql_agent.py  text2_sql_service.py
agent/text2sql/analysis/: data_render.py  data_render_antv.py  data_render_apache.py  graph.py  llm_reasoning.py  llm_summarizer.py  llm_util.py  reasoning.py  summarizer.py
agent/text2sql/database/: db_service.py  neo4j_search.py
agent/text2sql/sql/: generator.py
agent/text2sql/state/: agent_state.py
common/: date_util.py  duckdb_util.py  exception.py  initialize_mysql.py  minio_util.py  mysql_util.py  res_decorator.py  route_utility.py  token_decorator.py  word_util.py
component/pandasai/: pandas_ai_response.py
config/: load_env.py  logging.conf  serv.py
constants/: code_enum.py  dify_rest_api.py
controllers/: common_chat_api.py  db_chat_api.py  dify_chat_api.py  file_chat_api.py  ta_assistant_api.py  test_assitant_api.py  user_service_api.py
docker/: .dockerignore  .env  Dockerfile  deploy.sh  docker-compose.yaml  init_data.sh  init_sql.sql  nginx.conf.template
docker/dify/: 数据问答.yml  数据问答_v1.1.0.yml  数据问答_v1.1.1_deepseek.yml  数据问答_v1.1.2_deepseek.yml  数据问答_v1.1.5_qwen_plus.yml
docker/dify/docker/: .env  .env.example  README.md  docker-compose-template.yaml  docker-compose.middleware.yaml  docker-compose.yaml  generate_docker_compose  middleware.env.example  数据问答_v1.1.1_deepseek.yml
docs/docs/: environment.md  index.md  local-development.md  quick-start.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/blog/: index.html
docs/site/environment/: index.html
docs/site/faq/: index.html
docs/site/local-development/: index.html
docs/site/quick-start/: index.html
docs/site/search/: search_index.json
docs/site/zh/: index.html
logs/: sanic-web.log.2024-12-20
model/: database_service.py
puml/: llm_to_chart_dify.puml  llm_to_chart_matplotlib.puml  llm_to_chart_ycs.puml  mcp.puml
services/: db_qadata_process.py  dify_service.py  file_chat_service.py  pandas_ai_service.py  search_service.py  selenium_service.py  ta_assistant_service.py  test_assistant_service.py  text2_sql_service.py  user_service.py
src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/common/: pdf_util.py  redis_tool.py
src/config/: load_env.py  logging.conf
src/controllers/: common_chat_api.py  file_chat_api.py
src/docker/: Dockerfile  docker-compose.yaml  init_data.sh
src/services/: ta_assistant_service.py
src/web/: index.html
src/web/docker/: nginx.conf
vector_index/: metadata.json  schema.index
web/: .eslintrc  .eslintrc-auto-import.json  .prettierrc  .stylelintrc.cjs  LICENSE  Makefile  README.md  auto-imports.d.ts  babel.config.cjs  components-instance.d.ts  components.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
web/docker/: Dockerfile  nginx.conf
web/src/: App.vue  NaiveProvider.vue  env.d.ts  main.ts  shims-vue.d.ts
web/src/api/: index.ts
web/src/components/: 404.vue  index.ts
web/src/config/: env.ts
web/src/data/: index.ts  mock-md.md
web/src/hooks/: useClipText.ts  useCopyCode.ts  useCurrentInstance.ts  useTheme.ts
web/src/router/: child-routes.ts  index.ts  permission.ts  routes.ts
web/src/store/: index.ts
web/src/styles/: global.scss  index.scss  markdown.scss  theme.scss
(+673 files in other folders)
